--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "MCJPG",
   "type": "module",
   "version": "1.0.0",
-  "description": "基于 VitePress 打造前端导航网站",
+  "description": "MCJPG 官网",
   "private": true,
   "devDependencies": {
     "@femm/prettier": "^1.1.0",
@@ -10,22 +10,21 @@
     "@femm/verify-commit": "^1.0.1",
     "@giscus/vue": "^3.0.0",
     "@mdit-vue/shared": "^2.1.3",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.7.7",
     "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
     "cross-env": "^7.0.3",
-    "husky": "^9.1.5",
-    "lint-staged": "^15.2.9",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "medium-zoom": "^1.1.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "sass": "^1.77.8",
-    "tailwindcss": "^3.4.10",
+    "sass": "^1.80.3",
+    "tailwindcss": "^3.4.14",
     "vite-plugin-markdown-preview": "^1.1.1",
-    "vitepress": "^1.3.4",
-    "vitepress-plugin-back-to-top": "^1.0.1",
+    "vitepress": "^1.4.1",
     "vitepress-plugin-music": "^0.0.9",
-    "vue": "^3.4.38"
+    "vue": "^3.5.12"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
@@ -42,5 +41,8 @@
     "patchedDependencies": {
       "vite-plugin-markdown-preview@1.1.1": "patches/vite-plugin-markdown-preview@1.1.1.patch"
     }
+  },
+  "dependencies": {
+    "vitepress-plugin-comment-with-giscus": "^1.1.15"
   }
 }
